top-banner-added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 </head>
 <body>
     <!-- content head -->
-    <h1>Welcome to </h1>
-    <h1><span class="name-color">Muhammad Alinoor</span> Profile</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1><span class="name-color">Muhammad Alinoor</span> Profile</h1>
+            <h3>Big Web Site Builder and New Idea Generator</h3>
+            <p>
+                You will see my work in github.You will observe that there is many projects I have done.These projects are ranging from small to large. Besides, your observation may conclude about me that I am an idea generator. Because many new idea have been displayed in my designed page. The instance of my creative mind is available in the following github link. 
+            </p>
+            <a class="link-button" target="_blank" href="https://github.com/Muhammad-Alinoor">see my work</a>
+        </div>
+        <div class="half-width">
+            <img src="images/alinoor1.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
