dream-big,experience, footer added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <!-- content head -->
+    <!-- upper section -->
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to </h1>
@@ -30,5 +31,40 @@
             <img src="images/alinoor1.png" alt="">
         </div>
     </section>
+    <!-- middle level section -->
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/alinoor2.png" alt="">
+        </div>
+        <div class="half-width centering-dream-info">
+            <h3>Become a Web Developer's Master</h3>
+            <p>
+                A master of any work is the most eligible person for the work. So I want to be a master web developer and I want to learn and explore new things of web every day.I always remember that I have to do my best, I have to give my best, I have to learn from every project. So, I will be the best option to you.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/ali-noor-b314a7216/">see my linkedin profile</a>
+        </div>
+    </section>
+    <!-- last section -->
+    <h1 style="margin-left: 2%;">Experiences</h1>
+    <section class="experience-area">
+        <div id="full-stack-dev" class="half-width">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2022-Present!</h3>
+            <p>
+                In present, there are at least 10 complete project in my github. Every project is created with react, vanila js, html and css are common, sometimes bootstrap or tailwind css is used. Besides, all the site is interacted with firebase authentication system, mongodb for the backend development and all are hosted in either github page or in netlifier.There are minimum 100 projects have done.
+            </p>
+        </div>
+        <div id="baby-web-dev" class="half-width">
+            <h2>Baby Web Developer</h2>
+            <h3>July,2021 - December, 2021!</h3>
+            <p>
+                I have started my web development with Programming Hero.com. My teacher's name is Jhankar Mahabub. He learned about 4k students of batch-4 from very basic to intermediate level development.The course was finished after 6 months of the starting. After the course, there was a guidline for the advance learning of development. And we are going throug this path to become master web developer. 
+            </p>
+        </div>
+        
+    </section>
+    <footer>
+        <p>&copy; 2021.All rights of this portfolio site reserved by Muhammad Alinoor. </p>
+    </footer>
 </body>
 </html>
